--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "drag-drop-touch": "^1.3.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
