--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier:fix": "prettier --write --ignore-path .gitignore ./src"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
